--- a/README.Rmd
+++ b/README.Rmd
@@ -76,17 +76,17 @@ We **strongly** advise users to take advantage of these resources (as well as ot
 
 ## Setting up the pipeline
 
-1. Install [mamba](https://mamba.readthedocs.io/en/latest/installation/mamba-installation.html) or conda (https://docs.conda.io/projects/conda/en/stable/user-guide/install/index.html) if you have not already done so. A fresh install of mamba with miniforge (https://github.com/conda-forge/miniforge) is highly recommended because mamba is much faster than conda. It is ok if you prefer to use conda though; just replace all occurrences of `mamba` with `conda` in the code below.
+1. Install [mamba](https://mamba.readthedocs.io/en/latest/installation/mamba-installation.html) or [conda](https://docs.conda.io/projects/conda/en/stable/user-guide/install/index.html) if you have not already done so. Note that `mamba v2` has some compatibility issues with Snakemake, and the speed of `conda` has improved significantly in recent updates, so `mamba` is no longer recommended over `conda`. If you choose to use `mamba`, make sure to use a v1 version, and replace all occurrences of `conda` with `mamba` in the code below.
 
 2. Download `loco-pipe` from GitHub (e.g. using `git clone https://github.com/sudmantlab/loco-pipe.git`). We recommend you to download it to a folder where you store your software programs. We will refer to the full path of the directory that contains the `loco-pipe` folder as `SOFTWARE_DIR`.
 
-3. Create the `loco-pipe` conda environment using mamba by running `mamba env create -f $SOFTWARE_DIR/loco-pipe/workflow/envs/loco-pipe.yaml` (replace $SOFTWARE_DIR with a real path).
+3. Create the `loco-pipe` conda environment using conda by running `conda env create -f $SOFTWARE_DIR/loco-pipe/workflow/envs/loco-pipe.yaml` (replace $SOFTWARE_DIR with a real path).
 
 4. (Optional) If you would like to run local PCA with the [lostruct](https://github.com/petrelharp/local_pca) package in R using loco-pipe, you **must** install lostruct manually as it is not yet available on conda. Please install it to a conda environment named `lostruct_lcpipe` using the script below.
 
     ```{bash eval=FALSE}
     # create a conda environment named lostruct_lcpipe and install R and some key R packages
-    mamba env create -f $SOFTWARE_DIR/loco-pipe/workflow/envs/lostruct.yaml
+    conda env create -f $SOFTWARE_DIR/loco-pipe/workflow/envs/lostruct.yaml
     # activate the lostruct conda environment
     conda activate lostruct_lcpipe
     # launch R
@@ -157,7 +157,7 @@ We **strongly** advise users to take advantage of these resources (as well as ot
     ```{bash eval=FALSE}
     snakemake \
     --use-conda \
-    --conda-frontend mamba \
+    --conda-frontend conda \
     --directory $BASEDIR \
     --rerun-triggers mtime \
     --scheduler greedy \
